--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ROVANI | GET THE WEED</title>
   <link rel="icon" href="assets/images/atariLogoRed.jpg">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
-  
+  <div class="canvas__container">
+    <canvas width="1000" height="800"></canvas>
+  </div>
+  <script src="./assets/script/script.js"></script>
+  <script src="./assets/script/cars.js"></script>
+  <script src="./assets/script/character.js"></script>
+<img src="" alt="">
 </body>
 </html>
