colision-and-score-systems

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <script src="./assets/script/script.js"></script>
   <script src="./assets/script/cars.js"></script>
   <script src="./assets/script/character.js"></script>
+  <script src="./assets/script/score.js"></script>
+
 <img src="" alt="">
 </body>
 </html>
