--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>ROVANI | GET THE WEED</title>
   <link rel="icon" href="assets/images/atariLogoRed.jpg">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Blaka+Hollow&display=swap" rel="stylesheet">
 
 </head>
 <body>
