score-and-new-layout

--- a/index.html
+++ b/index.html
@@ -7,18 +7,36 @@
   <title>ROVANI | GET THE WEED</title>
   <link rel="icon" href="assets/images/atariLogoRed.jpg">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Blaka+Hollow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Blaka+Hollow&family=Press+Start+2P&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
-  <div class="canvas__container">
-    <canvas width="1000" height="800"></canvas>
-  </div>
-  <script src="./assets/script/script.js"></script>
-  <script src="./assets/script/cars.js"></script>
-  <script src="./assets/script/character.js"></script>
-  <script src="./assets/script/score.js"></script>
+  <h1>CAN YOU HELP ROVANI GETTING THE WEED?</h1>
+  <main>
 
-<img src="" alt="">
+    <div class="instructions__container">
+      <p class="instructions__text">USE THE KEYBOARD ARROWS TO SAVE OUR HERO<br>!</p>
+      <img src="./assets/images/keyboardKeys.png" alt="Keyboard Arrows" class="instructions__image">
+    </div>
+
+
+    <div class="canvas__container">
+      <canvas width="1000" height="800"></canvas>
+    </div>
+
+
+    <div class="score__container">
+      <h3 class="score__title">SCORE</h3>
+      <div class="score__images__container">
+      </div>
+    </div>
+
+    <script src="./assets/script/script.js"></script>
+    <script src="./assets/script/cars.js"></script>
+    <script src="./assets/script/character.js"></script>
+    <script src="./assets/script/score.js"></script>
+
+  </main>
 </body>
 </html>
