--- a/index.html
+++ b/index.html
@@ -38,5 +38,19 @@
     <script src="./assets/script/score.js"></script>
 
   </main>
+
+  <footer class="footer__container">
+    <div class="footer__personal">
+      <p class="footer__personal__name">Gabriel Godoy</p>
+      <p class="footer__personal__profession">Front-End Dev.</p>
+    </div>
+    <div class="footer__media"></div>
+    <ul class="footer__media__list">
+      <li><a href="https://github.com/gabegodoy"><img src="assets/images/github.png" alt="GitHub Logo"></a></li>
+      <li><a href="https://www.linkedin.com/in/gabecgodoy/"><img src="assets/images/linkedin.png" alt="LinkedIn Logo"></a></li>
+      <li><a href="https://twitter.com/gabcgodoy"><img src="assets/images/twitter.png" alt="Twitter Logo"></a></li>
+    </ul>
+  </footer>
+
 </body>
 </html>
