--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <footer class="footer__container">
     <div class="footer__personal">
       <p class="footer__personal__name">Gabriel Godoy</p>
-      <p class="footer__personal__profession">Front-End Dev.</p>
+      <p class="footer__personal__profession">Front-End Developer</p>
     </div>
     <div class="footer__media"></div>
     <ul class="footer__media__list">
