--- a/index.html
+++ b/index.html
@@ -52,5 +52,9 @@
     </ul>
   </footer>
 
+  <section class="mobile__view"> 
+    <img src="assets/images/mobile.jpeg" alt="">
+    <p>This Website is not available for mobile devices, Bitch!</p> 
+  </section>
 </body>
 </html>
