--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <ul class="footer__media__list">
       <li><a href="https://github.com/gabegodoy"><img src="assets/images/github.png" alt="GitHub Logo"></a></li>
       <li><a href="https://www.linkedin.com/in/gabecgodoy/"><img src="assets/images/linkedin.png" alt="LinkedIn Logo"></a></li>
-      <li><a href="https://twitter.com/gabcgodoy"><img src="assets/images/twitter.png" alt="Twitter Logo"></a></li>
+      <li><a href="https://gabegodoy.github.io/portfolio/"><img id="portfolio__image" src="assets/images/me-home.png" alt="Portfolio Logo"></a></li>
     </ul>
   </footer>
 
