--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <section class="mobile__view"> 
     <img src="assets/images/mobile.jpeg" alt="">
-    <p>This Website is not available for mobile devices, Bitch!</p> 
+    <p>This Website is not available for mobile devices, Honney!</p> 
   </section>
 </body>
 </html>
